<resources>
    <string name="app_name" translatable="false">KTest</string>


    <string name="unexpected_error_occurred">Error Occurred</string>
    <string name="network_error_unauthorized">Error : Unauthorized !</string>
    <string name="network_error_too_many_request">Error : too many requests</string>
    <string name="network_error_not_found">Error : Item not found</string>
    <string name="network_error_no_internet">Error : Can not connect to the internet</string>

    <string name="input">Input: </string>
    <string name="output">Output: </string>

    <string name="matrix">Matrix</string>
    <string name="people">People</string>
    <string name="ruler">Ruler</string>
    <string name="setting">Setting</string>

    <string name="centimeter">Centimeter</string>
    <string name="inch">Inch</string>

    <string name="select_language">Please select language</string>
    <string name="language">Application language</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="relations">Relations:</string>
    <string name="related_to">Related to</string>
    <string name="people_list">People list:</string>
    <string name="user">User</string>
    <string name="error_in_loading_data">Error in loading data</string>
    <string name="no_one">no one</string>


</resources>
