<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_matrix"
        android:icon="@drawable/ic_matrix"
        android:title="@string/matrix"
        app:cnb_iconColor="@color/color_matrix"/>

    <item
        android:id="@+id/item_people"
        android:icon="@drawable/ic_people"
        android:title="@string/people"
        app:cnb_iconColor="@color/color_people"/>

    <item
        android:id="@+id/item_ruler"
        android:icon="@drawable/ic_ruler"
        android:title="@string/ruler"
        app:cnb_iconColor="@color/color_ruler" />

    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:cnb_iconColor="@color/color_settings" />

</menu>